tests/errors/semantic/blocking/UNANNOTATED_TYPE_ALIAS.py
# Pyccel has encountered syntax that has not been implemented yet. Please create an issue at https://github.com/pyccel/pyccel/issues and provide a small example of your problem. Do not forget to specify your target language.
# pylint: disable=missing-function-docstring, missing-module-docstring

MyType = int

def f(a : MyType):
    pass
